# Travis_experiment

./: .travis.yml  CMakeLists.txt  README  README.md  infra_infos.txt
include/: CUDA_color_constraints.h  CUDA_info.h  CUDA_memory_managed_array.h  CUDA_memory_managed_item.h  CUDA_memory_managed_pointer.h  CUDA_print.h  CUDA_strong_primitive.h  CUDA_utils.h  dummy.h  emp_FSM_info.h  my_cuda.h  test.h
src/: CUDA_glutton_max.cu  main.cpp  test.cu
test/include/: example_object.h  test.h  test_if.h
test/src/: test.cpp  test.cu
tests/unitary/: test.info
